# phantom-toolbox

./: .coveragerc  .gitignore  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: cicd.yml
docs/: readme.rst
src/phtoolbox/: __init__.py  __main__.py  _version.py  cli.py  deploy.py  deps.py  validate.py
src/phtoolbox/app/: base_connector.py  deploy.py
tests/: __init__.py  conftest.py  test_connector.py  test_phantom.py
tests/calc/: calc.json  calc.py
tests/robot/: help.resource  help.robot  test_robot.ps1  vars.py
