[metadata]
name = phantom-toolbox
author = David D. Riddle
author_email = securitysupport@illinois.edu
description= Splunk SOAR Application development libraries and utilities
long_description = file: docs/README.rst
long_description_content_type= text/markdown
url= https://github.com/techservicesillinois/phantom-toolbox/
classifiers=
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: University of Illinois/NCSA Open Source License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Security
    Topic :: Utilities

[options]
python_requires = >=3.7
packages = find:
package_dir=
    = src
install_requires =
  setuptools_scm
include_package_data=True

[options.entry_points]
console_scripts =
    phantom = phtoolbox:_main

[options.packages.find]
where = src

[options.extras_require]
test = pytest; coverage
